src/test/resources/errors/loop-condition.intp
while 1 {
  val x = x + 1
}